swagger 可正常调用 graph，user，auth功能
